# im-trajectory-model

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  inputs.ini
IMtrajectoryModel/: Makefile  inputs.ini  main.cpp
IMtrajectoryModel.xcodeproj/: project.pbxproj
IMtrajectoryModel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IMtrajectoryModel.xcodeproj/project.xcworkspace/xcuserdata/kaischueller.xcuserdatad/: UserInterfaceState.xcuserstate
IMtrajectoryModel.xcodeproj/xcuserdata/kaischueller.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IMtrajectoryModel.xcodeproj/xcuserdata/kaischueller.xcuserdatad/xcschemes/: IceMoleTrajectoryModel.xcscheme  xcschememanagement.plist
IMtrajectoryModel/classes/: IMinputFileParser.cpp  IMinputFileParser.hpp  IMlogfile.cpp  IMlogfile.hpp  IMmodel.cpp  IMmodel.hpp  IMtrajectory.cpp  IMtrajectory.hpp
IMtrajectoryModel/functions/: IMinterpreter.cpp  runTests.cpp  runTests.hpp  utilities.cpp  utilities.hpp
examples/driveU/: clean.sh  inputs_driveU.ini  plotResult.m  run.sh
examples/turnright/: clean.sh  inputs_turnright.ini  plotResult.m  run.sh  turnright_toUse.csv
postprocessing/: animateTrajectory.m  plotTrajectory.m
postprocessing/functions/: plotColorLine3d.m
src/: main.cpp
src/libs/classes/: IMcmd.cpp  IMcmd.hpp  IMinputFileParser.cpp  IMinputFileParser.hpp  IMlogfile.cpp  IMlogfile.hpp  IMmodel.cpp  IMmodel.hpp  IMtrajectory.cpp  IMtrajectory.hpp
src/libs/functions/: IMinterpreter.cpp  IMinterpreter.hpp  improvedAnalyticalModel_velocity.cpp  improvedAnalyticalModel_velocity.hpp  runTests.cpp  runTests.hpp
test/simplifiedLogfile/: test_sl1.ini  test_sl2.csv  test_sl4.ini
test/simplifiedLogfile/test_sl1/: test_sl1.ini  test_sl1.result
test/simplifiedLogfile/test_sl2/: test_sl2.ini  test_sl2.result
test/simplifiedLogfile/test_sl3/: test_sl3.ini  test_sl3.result
test/simplifiedLogfile/test_sl4/: test_sl4.csv  test_sl4.result
test/simplifiedLogfile/test_sl5/: test_sl5.result
test/simplifiedLogfile/test_sl6/: test_sl6.ini  test_sl6.result
test/simplifiedLogfile/test_sl7/: test_sl7.ini  test_sl7.result
